message CTextInsertMessage {
  required uint64 counter = 1;
  required uint32 startValueIndex = 2;
  optional bytes metadata = 3;
  required string values = 4;
}

message CTextDeleteMessage {
  // Not set if same as message sender.
  optional string sender = 1;
  required uint64 counter = 2;
  required uint32 valueIndex = 3;
}

message CTextMessage {
  oneof op {
    CTextInsertMessage insert = 1;
    CTextDeleteMessage delete = 3;
  }
}

message CTextSave {
  required bytes positionSourceSave = 1;
  required string valuesSave = 3;
}
